--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Map App</title>
   <link rel="stylesheet" href="./index.scss">
+  <link rel="preload" crossorigin="anonymous" href="/scene.glb" as="fetch">
+  <link rel="preload" crossorigin="anonymous" href="/scene.bin" as="fetch">
+  <link rel="preload" crossorigin="anonymous" href="/textures/Planet_baseColor.png" as="fetch" type="image/png">
 </head>
+
 <body>
   <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
