styled component / text elements / header css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,11 @@
   <link rel="preload" crossorigin="anonymous" href="/scene.glb" as="fetch">
   <link rel="preload" crossorigin="anonymous" href="/scene.bin" as="fetch">
   <link rel="preload" crossorigin="anonymous" href="/textures/Planet_baseColor.png" as="fetch" type="image/png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
